--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "pomodoro-app": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "pomodoro-app"
+    }
+  },
+  "defaultProject": "pomodoro-app",
+  "cli": {
+    "analytics": "2e4dcb9a-f015-4211-9a1e-cb7feb9c9825"
+  }
 }
